Added gutter, ul, ol, link styles.

--- a/default.hbs
+++ b/default.hbs
@@ -31,7 +31,7 @@
 </head>
 <body class="{{body_class}}">
 
-    <div class="wrapper">
+    <div class="wrapper {{#is "home"}}wrapper--glow{{/is}}">
         {{{body}}}
     </div>
 
