--- a/styles/modules/_logo.scss
+++ b/styles/modules/_logo.scss
@@ -3,6 +3,7 @@
   
   &--large {
     font-size: 11vw;
+    letter-spacing: -0.075rem;
     line-height: 1;
     // font-family: $font-primary;
     // text-transform: uppercase;
@@ -11,11 +12,9 @@
     
     @include atSmall {
       font-size: 8.5vw;
-      letter-spacing: -0.1vw;
     }
     @include atLarge {
       font-size: 6rem;
-      letter-spacing: -0.1vmin;
     }
   }
   
