--- a/styles/modules/_hero.scss
+++ b/styles/modules/_hero.scss
@@ -2,7 +2,7 @@
 	overflow: hidden;
 
 	&__background {
-		background-position: center center;
+		background-position: center top;
 		position: absolute;
 		top: 0;
 		left: 0;
