--- a/styles/modules/_footer.scss
+++ b/styles/modules/_footer.scss
@@ -49,10 +49,12 @@
 
   &__about-text {
     font-size: 0.8rem;
+    font-weight: 400;
     line-height: 1.8;
     margin: -7px 0 0 20px;
     
     @include atSmall {
+      font-weight: 300;
       margin: -7px 12% 0 25px;
       max-width: 360px;
     }
