--- a/styles/modules/_hero.scss
+++ b/styles/modules/_hero.scss
@@ -95,6 +95,11 @@
 		color: white;
 		padding: 0 0 18px 0;
 		text-align: center;
+		font-weight: 400;
+
+		@include atSmall {
+			font-weight: 300;
+		}
 	}
 
 	&__link {
