--- a/index.hbs
+++ b/index.hbs
@@ -39,7 +39,7 @@
       </div>
     {{/foreach}}
     {{/get}}
-    {{#get "posts" filter="featured:false" limit="2" as |blocks|}}
+    {{#get "posts" limit="4" as |blocks|}}
       <div class="home__blocks">
         {{#foreach blocks}}
         <div class="home__block">
